--- a/script/references.bib
+++ b/script/references.bib
@@ -1362,3 +1362,244 @@ DOI: 10.1093/oso/9780198795209.001.0001}
 	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/ajps.12103},
 	note = {Publisher: John Wiley & Sons, Ltd}
 }
+
+@article{grimmer2013,
+	title = {Text as Data: The Promise and Pitfalls of Automatic Content Analysis Methods for Political Texts},
+	author = {Grimmer, Justin and Stewart, Brandon M.},
+	year = {2013},
+	date = {2013},
+	journal = {Political Analysis},
+	pages = {267--297},
+	volume = {21},
+	number = {3},
+	doi = {10.1093/PAN/MPS028},
+	url = {https://www.cambridge.org/core/journals/political-analysis/article/text-as-data-the-promise-and-pitfalls-of-automatic-content-analysis-methods-for-political-texts/F7AAC8B2909441603FEB25C156448F20},
+	note = {Publisher: Cambridge University Press}
+}
+
+@article{roberts2019a,
+	title = {stm: An R Package for Structural Topic Models},
+	author = {Roberts, Margaret E. and Stewart, Brandon M. and Tingley, Dustin},
+	year = {2019},
+	month = {10},
+	date = {2019-10},
+	journal = {Journal of Statistical Software},
+	pages = {1--40},
+	volume = {91},
+	doi = {10.18637/JSS.V091.I02},
+	url = {https://www.jstatsoft.org/index.php/jss/article/view/v091i02},
+	note = {Publisher: American Statistical Association}
+}
+
+@inproceedings{taddy2011,
+	title = {(AISTATS) 2012},
+	author = {Taddy, Matthew A.},
+	year = {2011},
+	month = {12},
+	date = {2011-12-27},
+	publisher = {arXiv},
+	doi = {10.48550/arXiv.1109.4518},
+	url = {http://arxiv.org/abs/1109.4518},
+	note = {DOI: 10.48550/arXiv.1109.4518
+arXiv:1109.4518 [stat]
+type: article},
+	address = {La Palma, Canary Islands}
+}
+
+@article{maier2018a,
+	title = {Applying LDA Topic Modeling in Communication Research: Toward a Valid and Reliable Methodology},
+	author = {Maier, Daniel and Waldherr, A. and Miltner, P. and Wiedemann, G. and Niekler, A. and Keinert, A. and Pfetsch, B. and Heyer, G. and Reber, U. and {Häussler}, T. and Schmid-Petri, H. and Adam, S.},
+	year = {2018},
+	month = {04},
+	date = {2018-04-03},
+	journal = {Communication Methods and Measures},
+	pages = {93--118},
+	volume = {12},
+	number = {2-3},
+	doi = {10.1080/19312458.2018.1430754},
+	url = {https://www.tandfonline.com/doi/full/10.1080/19312458.2018.1430754},
+	langid = {en}
+}
+
+@article{mergel2013,
+	title = {A framework for interpreting social media interactions in the public sector},
+	author = {Mergel, Ines},
+	year = {2013},
+	date = {2013},
+	journal = {Government Information Quarterly},
+	pages = {327--334},
+	volume = {30},
+	number = {4},
+	doi = {10.1016/j.giq.2013.05.015},
+	note = {Type: Journal Article}
+}
+
+@article{mergel2013,
+	title = {A Three-Stage Adoption Process for Social Media Use in Government},
+	author = {Mergel, Ines and Bretschneider, Stuart I.},
+	year = {2013},
+	month = {05},
+	date = {2013-05},
+	journal = {Public Administration Review},
+	pages = {390--400},
+	volume = {73},
+	number = {3},
+	doi = {10.1111/puar.12021},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/puar.12021},
+	langid = {en}
+}
+
+@article{karlsen2010,
+	title = {Does new media technology drive election campaign change?},
+	author = {Karlsen, Rune},
+	year = {2010},
+	month = {11},
+	date = {2010-11-19},
+	journal = {Information Polity},
+	pages = {215--225},
+	volume = {15},
+	number = {3},
+	doi = {10.3233/IP-2010-0208},
+	url = {https://www.medra.org/servlet/aliasResolver?alias=iospress&doi=10.3233/IP-2010-0208}
+}
+
+@article{mascheroni2013,
+	title = {Electoral Campaigning 2.0{\textemdash}The Case of Italian Regional Elections},
+	author = {Mascheroni, Giovanna and Mattoni, Alice},
+	year = {2013},
+	month = {04},
+	date = {2013-04},
+	journal = {Journal of Information Technology & Politics},
+	pages = {223--240},
+	volume = {10},
+	number = {2},
+	doi = {10.1080/19331681.2012.758073},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/19331681.2012.758073},
+	langid = {en}
+}
+
+@article{tursunbayeva2017,
+	title = {Use of social media for e-Government in the public health sector: A systematic review of published studies},
+	author = {Tursunbayeva, Aizhan and Franco, Massimo and Pagliari, Claudia},
+	year = {2017},
+	month = {04},
+	date = {2017-04},
+	journal = {Government Information Quarterly},
+	pages = {270--282},
+	volume = {34},
+	number = {2},
+	doi = {10.1016/j.giq.2017.04.001},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X16302088},
+	langid = {en}
+}
+
+@article{criado2021,
+	title = {Delivering public services through social media in European local governments. An interpretative framework using semantic algorithms},
+	author = {Criado, J. Ignacio and Villodre, Julian},
+	year = {2021},
+	month = {03},
+	date = {2021-03-04},
+	journal = {Local Government Studies},
+	pages = {253--275},
+	volume = {47},
+	number = {2},
+	doi = {10.1080/03003930.2020.1729750},
+	url = {https://www.tandfonline.com/doi/full/10.1080/03003930.2020.1729750},
+	langid = {en}
+}
+
+@article{marsden4,
+	title = {Platform values and democratic elections: How can the law regulate digital disinformation?},
+	author = {Marsden, Chris and Meyer, Trisha and Brown, Ian},
+	year = {04},
+	date = {04},
+	journal = {Computer Law & Security Review},
+	pages = {105373 [1--18]},
+	volume = {36},
+	doi = {10.1016/j.clsr.2019.105373},
+	langid = {English}
+}
+
+@article{marsden2020,
+	title = {Platform values and democratic elections: How can the law regulate digital disinformation?},
+	author = {Marsden, Chris and Meyer, Trisha and Brown, Ian},
+	year = {2020},
+	month = {04},
+	date = {2020-04},
+	journal = {Computer Law & Security Review},
+	pages = {105373},
+	volume = {36},
+	doi = {10.1016/j.clsr.2019.105373},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S026736491930384X},
+	langid = {en}
+}
+
+@article{marsden2020a,
+	title = {Platform values and democratic elections: How can the law regulate digital disinformation?},
+	author = {Marsden, Chris and Meyer, Trisha and Brown, Ian},
+	year = {2020},
+	month = {04},
+	date = {2020-04},
+	journal = {Computer Law & Security Review},
+	pages = {105373},
+	volume = {36},
+	doi = {10.1016/j.clsr.2019.105373},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S026736491930384X},
+	langid = {en}
+}
+
+@article{marsden2020b,
+	title = {Platform values and democratic elections: How can the law regulate digital disinformation?},
+	author = {Marsden, Chris and Meyer, Trisha and Brown, Ian},
+	year = {2020},
+	month = {04},
+	date = {2020-04},
+	journal = {Computer Law & Security Review},
+	pages = {105373},
+	volume = {36},
+	doi = {10.1016/j.clsr.2019.105373},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S026736491930384X},
+	langid = {en}
+}
+
+@article{bannister2015a,
+	title = {The great theory hunt: Does e-government really have a problem?},
+	author = {Bannister, Frank and Connolly, Regina},
+	year = {2015},
+	month = {01},
+	date = {2015-01},
+	journal = {Government Information Quarterly},
+	pages = {1--11},
+	volume = {32},
+	number = {1},
+	doi = {10.1016/j.giq.2014.10.003},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0740624X14001634},
+	langid = {en}
+}
+
+@article{panagiotopoulos2019,
+	title = {Public value creation in digital government},
+	author = {Panagiotopoulos, Panos and Klievink, Bram and Cordella, Antonio},
+	year = {2019},
+	date = {2019},
+	journal = {Government Information Quarterly},
+	pages = {101421 [1--8]},
+	volume = {36},
+	number = {4},
+	doi = {10.1016/j.giq.2019.101421},
+	note = {Type: Journal Article}
+}
+
+@article{panagiotopoulos2019a,
+	title = {Public value creation in digital government},
+	author = {Panagiotopoulos, Panos and Klievink, Bram and Cordella, Antonio},
+	year = {2019},
+	month = {10},
+	date = {2019-10-01},
+	journal = {Government Information Quarterly},
+	pages = {101421},
+	volume = {36},
+	number = {4},
+	doi = {10.1016/j.giq.2019.101421},
+	note = {Publisher: Elsevier Ltd}
+}
